kubernetes/apps/cheeses/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  -  http:
      paths:
      - path: /stilton
        backend:
          serviceName: stilton
          servicePort: http
  - http:
      paths:
      - path: /cheddar
        backend:
          serviceName: cheddar
          servicePort: http
  - http:
      paths:
      - path: /wensleydale
        backend:
          serviceName: wensleydale
          servicePort: http
